unload index.html instead

--- a/DIY.html
+++ b/DIY.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title>BOLIG PÅ SU|Nyheder</title>
+  <title>DIY|BOLIG PÅ SU</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/DIY.css">
 </head>
 
 <body style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif">
@@ -55,64 +55,94 @@
         </div>
       </div>
       <!-- Fimaets logo -->
-      <a href="index.html" class="companylogo">|BOLG PÅ SU|</a>
+      <a href="index.html" class="companylogo">|BOLIG PÅ SU|</a>
       <div class="header"></div>
     </nav>
   </header>
 
-  <h2> NYHEDER</h2>
-  <div class="row">
-    <div class="column">
-      <img src="images/simona-sergi-LrD6T6kI5Pc-unsplash.jpg" alt="vase" style="width: 100%;">
-      <p>Her er 7 elegante dekorative vaser til boligen</p>
-    </div>
+  <a href="#" class="backlink1" onclick="history.back();"> &lt;Tilbage</a>
 
-    <div class="column">
-      <img src="images/ikeagensalg.jpg" alt="spar" style="width: 100%;">
-      <p>Tip: Sælg eller køb din møbler i Ikeas gensalgs afdeling  </p>
-    </div>
-    
-    <div class="column">
-      <img src="images/phil-hearing-U7PitHRnTNU-unsplash.jpg" alt="badeværelse" style="width: 100%;">
-      <p>Inspiration til et stilrent men pratisk badeværelse</p>
-    </div>
-   
+  <h2> DIY: lav dit eget vægpynt</h2>
+  <div class="main">
+    <div class="leftcolumn">
 
+      Det er altid dejligt at give noget gammelt nyt liv.
+      <br>
+      <br>
+      Det DIY-projekt vi har til dig i dag, er et vægbillede lavet
+      af draperet stof.
+      <br>
+      <br>
+      Trin 1: ødelæg det lag
+      <br>
+      Du starter med at enten rive eller klip i et gammelt lagn eller stof.
+      HUSK: at stofstykket skal være dobbelt så stort som lærredet!
+      <br>
+      <br>
+
+      Trin 2: limpistol
+      <br>
+      Start med at varm din limpistol op.
+      Dernæst lim først det ene hjørne af stoffet på kanten af lærredsramme.
+      <br>
+      <br>
+
+      Trin 3:
+      <br>
+      Tvist og drapér stoffet samt fold med hænder, mens du limer stoffet på lærredet.
+      HUSK: at vær særlig opmærksom på, at fold hjørnerne og kanterne smukt og sirligt. Så man ikke kan se det
+      bagvedliggende lærred, når du hænger dit kunstværk op.
+      <br>
+      <br>
+
+      Trin 4:
+      <br>
+      Afslut draperingerne i et hjørne, og klip det overskydende stof. Så får du et flottere udtryk.
+      <br>
+      <br>
+
+      Trin 5:
+      <br>
+      Taddaaaa du har nu et flot kunstværk som nu er klar til at komme på væggen.
+
+      <br>
+      <br>
+
+      <img src="images/DIY.png" alt="diy" style="width: 70%;">
+      <h6 class="a_link"><a href="https://sostrenegrene.com/da/diy/vaegkunst-af-draperet-stof-og-laerred-d-7139"
+          target="_blank"> kilde: https://sostrenegrene.com/da/diy/vaegkunst-af-draperet-stof-og-laerred-d-7139</a></h6>
+
+    </div>
+    <div class="rightcolumn">
+      <div class="materialeliste">
+
+        Dét du skal bruge er:
+        <br>
+        <br>
+        Afrevet stykke stof fra et gammelt lagen
+        <br>
+        <br>
+        Lærred
+        <br>
+        <br>
+        Limstol
+        <br>
+        <br>
+        Limpatroner
+        <br>
+        <br>
+        Note: lærred, limpistol samt patroner kan købes i søstrene grene for blot 80,08 kr.
+      </div>
+
+
+      <div class="videocolumn">
+        <h4>Se video her </h4>
+        <video controls class="video_thumbnail">
+          <source src="videos/bats.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
   </div>
-
-  <h2> TOP ARTIKLER</h2>
-  <div class="row">
-    <div class="column">
-      <a href="#">
-      <img src="images/DIY.png" alt="diy" style="width:100%">
-      <p>Lav dit eget vægpynt</p>
-      </a>
-    </div>
-
-    <div class="column">
-      <a href="nicetoknow.html">
-        <img src="images/nice to know.png" alt="råd" style="width: 100%;">
-        <p> Nice to know: inden du flytter hjemmefra</p>
-      </a>
-    
-    </div>
-    <div class="column">
-      <a href="tt.html">
-      <img src="images/ttt.jpg" alt="tt" style="width: 100%;">
-      <p>Tidens Tendenser</p>
-      </a>
-    </div>
-
-  </div>
-
-
-
-
-
-
-
-
-
 
   <!----footer -->
   <footer class="page_footer">
